--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "#airc-test"
   ],
   "model": "text-davinci-003",
-  "max_prompt_length": 300,
+  "max_prompt": 300,
   "max_tokens": 200,
   "autorespond": 10,
   "rules": "",
