--- a/config.json
+++ b/config.json
@@ -4,6 +4,7 @@
   "channels": [
     "#airc-test"
   ],
+  "model": "text-davinci-003",
   "max_prompt": 300,
   "max_tokens": 200,
   "max_context": 500,
