--- a/config.json
+++ b/config.json
@@ -5,9 +5,10 @@
     "#airc-test"
   ],
   "model": "text-davinci-003",
-  "max_prompt": 360,
   "max_tokens": 200,
-  "max_context": 500,
+  "max_prompt": 350,
+  "max_rules": 350,
+  "max_context": 350,
   "rules": "",
   "admins": [
     "madprops"
