--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "airc",
   "dependencies": {
-    "openai": "3.2.1",
-    "irc": "0.5.2"
+    "openai": "~3.2.1",
+    "matrix-org-irc": "~1.5.0"
   }
 }
