--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "airc",
   "dependencies": {
     "openai": "~3.2.1",
-    "matrix-org-irc": "~1.5.0",
-    "sentencer": "~0.2.1"
+    "matrix-org-irc": "~1.5.0"
   }
 }
