--- a/config.json
+++ b/config.json
@@ -26,5 +26,6 @@
   "show_avatar": true,
   "autorespond": 1,
   "autorespond_cooldown": 60,
-  "autorespond_words": 20
+  "autorespond_words": 20,
+  "words": 0
 }
