--- a/config.json
+++ b/config.json
@@ -21,6 +21,10 @@
   "spam_minutes": 30,
   "compact": true,
   "command_char": "!",
+  "clear_char": "^",
+  "emphasize_char": "!",
+  "explain_char": "/",
+  "continue_char": ">",
   "mention_char": "@",
   "avatar": "👾",
   "show_avatar": true,
