--- a/config.json
+++ b/config.json
@@ -17,6 +17,7 @@
   "users": [],
   "allow_ask": "all",
   "allow_rules": "all",
+  "allow_prompts": "all",
   "spam_limit": 3,
   "spam_minutes": 30,
   "compact": true,
