--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
   ],
   "port": 6667,
   "nickname": "airc-bot",
-  "model": "turbo",
+  "model": "gpt-3.5-turbo",
   "context": 2,
   "max_tokens": 500,
   "max_prompt": 350,
