--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "openai": "~4.77.0",
     "matrix-org-irc": "~3.0.0",
     "eslint": "~9.17.0",
-		"globals": "~15.9.0"
+		"globals": "~15.9.0",
+    "axios": "~1.7.9"
   }
 }
