--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "eslint": "~9.17.0",
 		"globals": "~15.9.0",
     "axios": "~1.7.9",
+  },
+  "optionalDependencies": {
     "node-llama-cpp": "~3.5.0"
   }
 }
