--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "matrix-org-irc": "git+https://github.com/matrix-org/node-irc",
     "eslint": "~9.17.0",
 		"globals": "~15.9.0",
-    "axios": "~1.7.9",
+    "axios": "~1.7.9"
   },
   "optionalDependencies": {
     "node-llama-cpp": "~3.5.0"
