--- a/config.json
+++ b/config.json
@@ -53,5 +53,6 @@
   "timeago": true,
   "upload_max": 500,
   "upload_password": "airc123",
-  "talk_delay": 500
+  "talk_delay": 500,
+  "long_message": 500
 }
