--- a/config.json
+++ b/config.json
@@ -57,6 +57,7 @@
   "long_message": 500,
   "think_summary": true,
   "think_summary_words": 300,
+  "think_summary_0": "",
   "think_summary_1": "Consider the following text as reference or inspiration",
   "think_summary_2": "Now give a full overview about what was said and provide possible insights"
 }
