--- a/config.json
+++ b/config.json
@@ -58,7 +58,8 @@
   "think_summary": true,
   "think_summary_words": 300,
   "talk_prompt": "",
-  "think_prompt": "",
+  "think_prompt_1": "",
+  "think_prompt_2": "",
   "think_summary_0": "",
   "think_summary_1": "Consider the following text as reference or inspiration",
   "think_summary_2": "Now give a full overview about what was said and provide possible insights"
